feat: add rewards as triggers for roulette
